feat: define user api (#55)
Refs: closes #53 

## Summary

Update the Swagger specification with the HTTP API definition for the
User domain.

## Changes

- Update swagger spec with user endpoints
- Update handler structure to implement the generated http interface
