# server/internal/transport/http/user.go
@@ -11,6 +11,41 @@ import (
 	"github.com/goncalo-marques/ecomap/server/internal/logging"
 )
 
+// CreateUser handles the http request to create a user.
+func (h *handler) CreateUser(w http.ResponseWriter, r *http.Request) {
+	// TODO: Implement this.
+}
+
+// ListUsers handles the http request to list users.
+func (h *handler) ListUsers(w http.ResponseWriter, r *http.Request, params spec.ListUsersParams) {
+	// TODO: Implement this.
+}
+
+// GetUserByID handles the http request to get a user by ID.
+func (h *handler) GetUserByID(w http.ResponseWriter, r *http.Request, userID spec.UserIdPathParam) {
+	// TODO: Implement this.
+}
+
+// PatchUserByID handles the http request to modify a user by ID.
+func (h *handler) PatchUserByID(w http.ResponseWriter, r *http.Request, userID spec.UserIdPathParam) {
+	// TODO: Implement this.
+}
+
+// DeleteUserByID handles the http request to delete a user by ID.
+func (h *handler) DeleteUserByID(w http.ResponseWriter, r *http.Request, userID spec.UserIdPathParam) {
+	// TODO: Implement this.
+}
+
+// UpdateUserPassword handles the http request to update a user password.
+func (h *handler) UpdateUserPassword(w http.ResponseWriter, r *http.Request) {
+	// TODO: Implement this.
+}
+
+// ResetUserPassword handles the http request to reset a user password.
+func (h *handler) ResetUserPassword(w http.ResponseWriter, r *http.Request) {
+	// TODO: Implement this.
+}
+
 // SignInUser handles the http request to sign in a user.
 func (h *handler) SignInUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
